fix collapse hamb, absolute wrapper, minor animation

--- a/src/styles/_background.scss
+++ b/src/styles/_background.scss
@@ -16,4 +16,5 @@
   z-index: 1;
   overflow: hidden;
   left: -300vw;
+  top: 0;
 }
